<?xml version="1.0"?>
<package format="2">
  <name>pallet_identification</name>
  <version>0.0.0</version>
  <description>The pallet_identification package</description>

  <maintainer email="ant@todo.todo">ant</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  
  <!-- 新增的系统/第三方依赖 -->
  <depend>yaml-cpp</depend>
  
  <!-- 补充遗漏的 ROS 消息和计算依赖 -->
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <!-- Autoware 自定义消息依赖 -->
  <depend>autoware_can_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>autoware_remove_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>